@@ -1,4 +1,4 @@
 DIST wagon-http-1.0.tar.bz2 11701 RMD160 e6ae919550957dc8758ed745c57e96a14a979928 SHA1 7ea5de94611623b40f9a026e21e866d0cfe21486 SHA256 94909e46dd76ea5ab67663ccc88e31dbdb8819cbe9d799a075874b4cf268e976
-EBUILD wagon-http-1.0.ebuild 1079 RMD160 e84c003b43e816d98caee6e1efe8e4d28accee60 SHA1 be1f3a50b609cede34a105e0374939a64e1cc364 SHA256 b3ee0121c2db2da6e519fcb20a8272b0c505bd3784be9db8e06d82b4ab148f54
-MISC ChangeLog 217 RMD160 fe388b608bb80eb3737f0f64140e46b82bb5e0f3 SHA1 80f1efcbef9153d499855e5eeaab2a70fca53833 SHA256 1bcbb956163b7501e819699b847b41838a0db95c447ac7a0b6460f669f2911ca
+EBUILD wagon-http-1.0.ebuild 1023 RMD160 4ff0e8adbbc8c784354521ec2a0628a283af65d6 SHA1 c96a5bc04fd9951005f465c5790f50303656b498 SHA256 e3a06e1fcb43d0aa6d8b378570ff02486853d922c68b55624972294f2caece72
+MISC ChangeLog 317 RMD160 0d84dcdebe03edaaa941c7a470868ec35473ba97 SHA1 51e5ba5cb9e70e879a3adb656b0dcf1161f67e47 SHA256 628e3459857e8e88c92633f8378fb7e6665685c7166619aea016e7ec9433099e
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
