@@ -2,18 +2,16 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit java-pkg-2 java-maven-2
+inherit java-maven-2
 
 DESCRIPTION="The Wagon API project defines a simple API for transfering resources (artifacts) to and from repositories"
 # svn co http://svn.apache.org/repos/asf/maven/wagon/tags/*/wagon-provider-api/ wagon-provider-api
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
-
 SLOT="0"
 KEYWORDS="~x86"
 IUSE="source doc"
 LICENSE="Apache-2.0"
 HOMEPAGE="http://maven.apache.org"
-
 DEP="dev-java/jtidy
 	dev-java/wagon-provider-api
 	dev-java/plexus-utils
@@ -34,8 +32,4 @@ EANT_GENTOO_CLASSPATH="jtidy
 	commons-logging
 	commons-lang
 	commons-httpclient"
-
-src_compile() {
-	java-pkg-2_src_compile
-}
 
